More spacing fixes

--- a/src/style/Work.css
+++ b/src/style/Work.css
@@ -90,6 +90,7 @@
    font-family:'Source Code Pro', monospace;
    font-size: 45px;
    color: #2D278C;
+   padding-top: 20px;
 
 }
 
